# retentioneering

./: .env.development  .env.example  .env.production  .gitignore  DEPLOYMENT.md  Dockerfile  MVP_TESTING_GUIDE.md  README.md  VALIDATION_REPORT.md  docker-compose.dev.yml  docker-compose.yml  mvp_validation_results_20250712_010958.json  pyproject.toml  validate_mvp.py
notebooks/: 01_board_report.ipynb  01_data_exploration.ipynb  01_retention_metrics.ipynb  README.md  data_processor.py  simple_plots.py
scripts/: README.md  generate_board_retention_report.py  run_model.py  test_cli.py
security/: deployment.md
src/: __init__.py
src/config/: __init__.py  database.py  example_usage.py  settings.py  simple_test.py  test_config.py
src/data/: README.md  __init__.py  example_usage.py  extraction.py  preprocessing.py  sample_data.py  test_data_modules.py
src/models/: __init__.py  bgnbd.py  evaluation.py  example_usage.py  simple_test.py  standalone_test.py  test_integration.py
src/retention_metrics/: board_retention_reporter.py  six_month_retention_processor.py
src/visualization/: __init__.py  board_report_visualizations.py  example_usage.py  plots.py  simple_test.py  test_plots.py
